# dueling-network-architectures

./: LICENSE  README.md  requirements.txt  setup.cfg
notebooks/: Deep_Q_Learning.ipynb  Dueling_architectures.ipynb
src/dueling_arch/: training.py
src/dueling_arch/models/: model.py  model_atari.py
src/dueling_archs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
