# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = dueling-archs
version = 0.1.0
url = https://github.com/gle-bellier/dueling-network-architectures
download_url =https://github.com/gle-bellier/dueling-network-architectures
project_urls =
    Documentation = https://github.com/gle-bellier/dueling-network-architectures
    Source = https://github.com/gle-bellier/dueling-network-architectures
author = LeBellier Georges
author_email = georges.lebellier@gmail.com
maintainer = LeBellier Georges
maintainer_email = georges.lebellier@gmail.com
# https://pypi.org/classifiers/
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Deep Learning
    Topic :: Scientific/Engineering :: Artificial Intelligence
# license =
license_files = file: LICENSE
description = Implementation of Dueling Network Architectures for Deep RL
long_description = file: README.md
long_description_content_type = text/markdown

# platforms =
# provides =
# requires =
# obsoletes =


[options]
# zip_safe =
# setup_requires =
install_requires =
    numpy
    pandas

# extras_require see [options.extras_require]
python_requires = >=3.8
# entry_points =
# scripts =
# eager_resources =
# dependency_links =
# tests_require =
# include_package_data =
packages = find:
package_dir =
    =src
# namespace_packages =
# py_modules =
# data_files = 

[options.packages.find]
where = src
# include =
exclude = tests

[options.extras_require]
# MacOS pip install -e ".[notebook,docs,dev]"
# Windows pip install -e .[notebook,docs,dev]
# Linux idk, one of the two options above
notebook =
    jupyter
    ipykernel
docs =
    sphinx
dev =
    pre-commit
    pytest
    black
    isort
